fixed the alignment
Updated the css to fix the profilepic alignment

--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ body {
     align-items: center;
     justify-content: center;
     margin-right: 10px;
+    padding-top: 1rem;
 }
 
 .background-resume {
